--- a/index.html
+++ b/index.html
@@ -28,124 +28,181 @@ share and explore ideas that matter
     <body>
         <section class="site-section" id="banner">
             <div class="shadow-overlay"></div>
-            <img id="logo" src="img/LogoVurze_white.png" alt="Vurze" width="302" height="114" />
-            <div class="section-block" id="banner-block">
-                <h2 class="section-title">Connect with people who care</h2>
-                <p class="section-text">
-                    Vurze is a social network for changemakers
-                    that connects you with people like you, to
-                    share and explore ideas that matter
-                </p>
-                <form method="POST" action="#" class="invite-form">
-                    <label for="main-email-input">
-                        <img class="email-label-image" src="img/Icon_Email_Javalight.png" alt="Email" width="102" height="66" />
-                    </label>
-                    <input type="text" class="invite-input" id="main-email-input" />
-                    <input type="submit" class="invite-submit" value="REQUEST" />
-                </form>
+            <div class="column">
+                <img id="logo" src="img/LogoVurze_white.png" alt="Vurze" width="151" height="57" />
+                <div class="section-block" id="banner-block">
+                    <h2 class="section-title">Connect with people who care</h2>
+                    <p class="section-text">
+                        Vurze is a social network for changemakers
+                        that connects you with people like you, to
+                        share and explore ideas that matter
+                    </p>
+                    <form method="POST" action="#" class="invite-form">
+                        <label for="main-email-input" class="invite-label">
+                            <img class="email-label-image" src="img/Icon_envelop_Java.png" alt="Email" width="36" height="24" />
+                        </label>
+                        <input type="text" class="invite-input" id="main-email-input" placeholder="Sign up for an invite" />
+                        <input type="submit" class="invite-submit" value="REQUEST" />
+                    </form>
+                </div>
+                <a href="#" id="play-url">
+                    <img id="play-image" src="img/GooglePlay_button_white.png" alt="Vurze on Google Play" width="183" height="61" />
+                </a>
             </div>
-            <a href="#" id="play-url">
-                <img id="play-image" src="img/GooglePlay_button_white.png" alt="Vurze on Google Play" width="183" height="61" />
-            </a>
         </section>
         <section class="site-section" id="explanation">
-            <div id="phone-block">
-                <img src="img/Nexus_front_explore.png" alt="Exploration image" width="686" height="1246" />
-                <img src="img/Nexus_front_Connect.png" alt="Connect image" width="686" height="1246" />
-                <img src="img/Nexus_front_Share.png" alt="Share image" width="686" height="1246" />
-            </div>
-            <div id="explanation-block">
-                <div class="explanation-cell">
-                    <img class="explanation-icon" id="compass-icon" src="img/Icon_compass.png" alt="Exploration icon" width="98" height="98" />
-                    <p class="section-text">Explore and discuss ideas that matter to you</p>
+            <div class="column">
+                <div id="phone-block">
+                    <img src="img/Nexus_front_explore.png" class="phone-image visible" alt="Exploration image" width="343" height="623" />
+                    <img src="img/Nexus_front_Connect.png" class="phone-image" alt="Connect image" width="343" height="623" />
+                    <img src="img/Nexus_front_Share.png" class="phone-image" alt="Share image" width="343" height="623" />
                 </div>
-                <div class="explanation-cell">
-                    <img class="explanation-icon" id="group-icon" src="img/Icon_group.png" alt="People icon" width="98" height="74" />
-                    <p class="section-text">Connect with passionate and interesting people</p>
-                </div>
-                <div class="explanation-cell">
-                    <img class="explanation-icon" id="world-icon" src="img/Icon_world.png" alt="World icon" width="102" height="102" />
-                    <p class="section-text">Share your thoughts with the world</p>
+                <div id="explanation-block">
+                    <div class="explanation-cell active">
+                        <div class="explanation-icon-container">
+                            <img class="explanation-icon" id="compass-icon" src="img/Icon_compass.png" alt="Exploration icon" width="49" height="49" />
+                        </div>
+                        <p class="explanation-text">Explore and discuss ideas that matter to you</p>
+                        <div class="progress-bar active">
+                            <div id="teal-bar" class="progress-bar-filled"></div>
+                        </div>
+                    </div>
+                    <div class="explanation-cell">
+                        <div class="explanation-icon-container">
+                            <img class="explanation-icon" id="group-icon" src="img/Icon_group.png" alt="People icon" width="49" height="37" />
+                        </div>
+                        <p class="explanation-text">Connect with passionate and interesting people</p>
+                        <div class="progress-bar">
+                            <div id="purple-bar" class="progress-bar-filled"></div>
+                        </div>
+                    </div>
+                    <div class="explanation-cell">
+                        <div class="explanation-icon-container">
+                            <img class="explanation-icon" id="world-icon" src="img/Icon_World2.png" alt="World icon" width="51" height="51" />
+                        </div>
+                        <p class="explanation-text">Share your thoughts with the world</p>
+                        <div class="progress-bar">
+                            <div id="blue-bar" class="progress-bar-filled"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
         <section class="site-section" id="explore">
-            <div class="section-block">
-                <h2 class="section-title">Explore and discuss ideas that matter to you</h2>
-                <p class="section-text">
-                    Thinking of new ways to make impactful change?
-                    On Vurze you can explore the knowledge and insights
-                    of other changemakers, check out ways to help and
-                    upvote inspiring ideas.
-                </p>
+            <div class="column">
+                <div class="section-block left">
+                    <div class="cute-little-bar">&nbsp;</div>
+                    <h2 class="section-title">Explore and discuss ideas that matter to you</h2>
+                    <p class="section-text">
+                        Thinking of new ways to make impactful change?
+                        On Vurze you can explore the knowledge and insights
+                        of other changemakers, check out ways to help and
+                        upvote inspiring ideas.
+                    </p>
+                </div>
+                <div id="explore-image-container">
+                    <img id="explore-image" src="img/Screen_messages.jpg" alt="#" width="640" height="1604" />
+                </div>
             </div>
-            <img id="explore-image" src="img/Screen_messages.jpg" alt="#" width="640" height="1604" />
         </section>
         <section class="site-section" id="connect">
-            <div class="section-block">
-                <h2 class="section-title">Connect with passionate and interesting people</h2>
-                <p class="section-text">
-                    Connect with like-minded people and discuss
-                    issues that you find important. Vurze helps you find
-                    and connect with communities that share your
-                    values and passion.
-                </p>
+            <div class="column">
+                <div class="section-block left">
+                    <div id="people">
+                        <div class="people-row offset-left first">
+                            <img class="person-hex" src="img/Profile1.png" alt="Person 1" width="194" height="224" />
+                            <img class="person-hex" src="img/Profile2.png" alt="Person 1" width="194" height="224" />
+                            <img class="person-hex" src="img/Profile3.png" alt="Person 1" width="194" height="224" />
+                        </div>
+                        <div class="people-row">
+                            <img class="person-hex" src="img/Profile4.png" alt="Person 1" width="194" height="224" />
+                            <img class="person-hex" src="img/Profile5.png" alt="Person 1" width="194" height="224" />
+                            <img class="person-hex" src="img/Profile6.png" alt="Person 1" width="194" height="224" />
+                        </div>
+                        <div class="people-row offset-left last">
+                            <img class="person-hex" src="img/Profile7.png" alt="Person 1" width="194" height="224" />
+                            <img class="person-hex" src="img/Profile8.png" alt="Person 1" width="194" height="224" />
+                            <img class="person-hex" src="img/Profile9.png" alt="Person 1" width="194" height="224" />
+                        </div>
+                    </div>
+                </div>
+                <div class="section-block black right">
+                    <div class="cute-little-bar purple">&nbsp;</div>
+                    <h2 class="section-title">Connect with passionate and interesting people</h2>
+                    <p class="section-text">
+                        Connect with like-minded people and discuss
+                        issues that you find important. Vurze helps you find
+                        and connect with communities that share your
+                        values and passion.
+                    </p>
+                </div>
             </div>
         </section>
         <section class="site-section" id="share">
-            <div class="section-block">
-                <h2 class="section-title">Share your thoughts with the world</h2>
-                <p class="section-text">
-                    Share your thought with a socially
-                    conscious group of changemakers. Bounce
-                    ideas between each other and learn from
-                    others how they make change in this world.
-                </p>
+            <div class="shadow-overlay"></div>
+            <div class="column">
+                <div class="section-block">
+                    <div class="cute-little-bar">&nbsp;</div>
+                    <h2 class="section-title">Share your thoughts with the world</h2>
+                    <p class="section-text">
+                        Share your thought with a socially
+                        conscious group of changemakers. Bounce
+                        ideas between each other and learn from
+                        others how they make change in this world.
+                    </p>
+                </div>
             </div>
         </section>
         <section id="invite-signup">
-            <div class="invite-block">
-                <form method="POST" action="#">
-                    <label for="secondary-email-input">
-                        <img src="img/Icon_Email_Javalight.png" alt="Email" width="102" height="66" />
-                    </label>
-                    <input type="text" class="email-input" id="secondary-email-input" />
-                    <input type="submit" value="REQUEST" />
-                </form>
-            </div>
-            <div class="invite-block">
-                <h3 id="contact-heading">Say hi, get in touch</h3>
-                <ul>
-                    <li>
-                        <a href="#">
-                            <span class="contact-icon" id="facebook-icon"></span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <span class="contact-icon" id="twitter-icon"></span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <span class="contact-icon" id="instagram-icon"></span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <span class="contact-icon" id="mail-icon"></span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <span class="contact-icon" id="maps-icon"></span>
-                        </a>
-                    </li>
-                </ul>
+            <div class="column">
+                <div class="section-block left">
+                    <h3 class="secondary-heading">Sign up for an invite</h3>
+                    <form method="POST" action="#" class="invite-form secondary">
+                        <label for="secondary-email-input" class="invite-label">
+                            <img class="email-label-image" src="img/Icon_envelop_Java.png" alt="Email" width="36" height="24" />
+                        </label>
+                        <input type="text" class="invite-input" id="secondary-email-input" placeholder="Sign up for an invite" />
+                        <input type="submit" class="invite-submit secondary" value="REQUEST" />
+                    </form>
+                </div>
+                <div class="section-block right">
+                    <h3 class="secondary-heading">Say hi, get in touch</h3>
+                    <ul id="social-media-list">
+                        <li class="social-media-item">
+                            <a class="contact-icon-link" href="#">
+                                <span class="contact-icon" id="facebook-icon"></span>
+                            </a>
+                        </li>
+                        <li class="social-media-item">
+                            <a class="contact-icon-link" href="#">
+                                <span class="contact-icon" id="twitter-icon"></span>
+                            </a>
+                        </li>
+                        <li class="social-media-item">
+                            <a class="contact-icon-link" href="#">
+                                <span class="contact-icon" id="instagram-icon"></span>
+                            </a>
+                        </li>
+                        <li class="social-media-item">
+                            <a class="contact-icon-link" href="#">
+                                <span class="contact-icon" id="mail-icon"></span>
+                            </a>
+                        </li>
+                        <li class="social-media-item">
+                            <a class="contact-icon-link" href="#">
+                                <span class="contact-icon" id="maps-icon"></span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </section>
         <footer id="site-footer">
-            <img src="img/LogoVurze_white.png" alt="Vurze" width="302" height="114" />
+            <div class="column">
+                <img id="vurze-footer-logo" src="img/LogoVurze_white.png" alt="Vurze" width="151" height="57" />
+                <span id="copyright-text">MIWI &copy; 2015. All rights reserved.</span>
+            </div>
         </footer>
+        <script src="js/site.js"></script>
     </body>
 </html>
