--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ share and explore ideas that matter
             <div class="column">
                 <img id="logo" src="img/LogoVurze_white.png" alt="Vurze" width="151" height="57" />
                 <div class="section-block" id="banner-block">
-                    <h2 class="section-title">Connect with people who care</h2>
+                    <h2 class="section-title" id="main-heading">Connect with people who care</h2>
                     <p class="section-text">
                         Vurze is a social network for changemakers
                         that connects you with people like you, to
