--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ share and explore ideas that matter
                         <label for="main-email-input" class="invite-label">
                             <img class="email-label-image" src="img/Icon_envelop_Java.png" alt="Email" width="36" height="24" />
                         </label>
-                        <input type="text" class="invite-input" id="main-email-input" placeholder="Sign up for an invite" />
+                        <input type="text" class="invite-input" id="main-email-input" placeholder="Sign up for an invite" spellcheck="false" />
                         <input type="submit" class="invite-submit" value="REQUEST" />
                     </form>
                 </div>
@@ -143,7 +143,7 @@ share and explore ideas that matter
             <div class="column">
                 <div class="section-block">
                     <div class="cute-little-bar">&nbsp;</div>
-                    <h2 class="section-title">Share your thoughts with the world</h2>
+                    <h2 class="section-title">Share your thoughts<br /> with the world</h2>
                     <p class="section-text">
                         Share your thought with a socially
                         conscious group of changemakers. Bounce
@@ -161,7 +161,7 @@ share and explore ideas that matter
                         <label for="secondary-email-input" class="invite-label">
                             <img class="email-label-image" src="img/Icon_envelop_Java.png" alt="Email" width="36" height="24" />
                         </label>
-                        <input type="text" class="invite-input" id="secondary-email-input" placeholder="Sign up for an invite" />
+                        <input type="text" class="invite-input" id="secondary-email-input" placeholder="Sign up for an invite" spellcheck="false" />
                         <input type="submit" class="invite-submit secondary" value="REQUEST" />
                     </form>
                 </div>
