--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ share and explore ideas that matter
                         </div>
                         <p class="explanation-text">Explore and discuss ideas that matter to you</p>
                         <div class="progress-bar active">
-                            <div id="teal-bar" class="progress-bar-filled"></div>
+                            <div id="teal-bar" class="progress-bar-filled" data-width="0"></div>
                         </div>
                     </div>
                     <div class="explanation-cell">
@@ -73,16 +73,16 @@ share and explore ideas that matter
                         </div>
                         <p class="explanation-text">Connect with passionate and interesting people</p>
                         <div class="progress-bar">
-                            <div id="purple-bar" class="progress-bar-filled"></div>
+                            <div id="purple-bar" class="progress-bar-filled" data-width="0"></div>
                         </div>
                     </div>
                     <div class="explanation-cell">
                         <div class="explanation-icon-container">
-                            <img class="explanation-icon" id="world-icon" src="img/Icon_World2.png" alt="World icon" width="51" height="51" />
+                            <img class="explanation-icon" id="world-icon" src="img/Icon_world.png" alt="World icon" width="51" height="51" />
                         </div>
                         <p class="explanation-text">Share your thoughts with the world</p>
                         <div class="progress-bar">
-                            <div id="blue-bar" class="progress-bar-filled"></div>
+                            <div id="blue-bar" class="progress-bar-filled" data-width="0"></div>
                         </div>
                     </div>
                 </div>
