--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ share and explore ideas that matter
         <meta name="description" content="Vurze description" />
 
         <!-- Some mobile viewport optimization -->
-        <meta name="viewport" content="width=device-width,initial-scale=1" />
+        <meta name="viewport" content="width=device-width,initial-scale=1.0" />
 
         <!-- Make things a tad bit prettier on mobile IE -->
         <!--<meta http-equiv="cleartype" content="on" />-->
@@ -31,7 +31,7 @@ share and explore ideas that matter
             <div class="column">
                 <img id="logo" src="img/LogoVurze_white.png" alt="Vurze" width="151" height="57" />
                 <div class="section-block" id="banner-block">
-                    <h2 class="section-title" id="main-heading">Connect with people who care</h2>
+                    <h2 class="section-title" id="main-heading">Connect<br class="mobile-break" /> with people<br class="mobile-break" /> who care</h2>
                     <p class="section-text">
                         Vurze is a social network for changemakers
                         that connects you with people like you, to
