--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ share and explore ideas that matter
                 <div class="section-block" id="banner-block">
                     <h2 class="section-title" id="main-heading">Connect<br class="mobile-break" /> with people<br class="mobile-break" /> who care</h2>
                     <p class="section-text">
-                        Vurze is a social network for changemakers
+                        Vurze is a social network for change-makers
                         that connects you with people like you, to
                         share and explore ideas that matter
                     </p>
@@ -111,7 +111,7 @@ share and explore ideas that matter
                     <p class="section-text">
                         Thinking of new ways to make impactful change?
                         On Vurze you can explore the knowledge and insights
-                        of other changemakers, check out ways to help and
+                        of other change-makers, check out ways to help and
                         upvote inspiring ideas.
                     </p>
                 </div>
@@ -161,7 +161,7 @@ share and explore ideas that matter
                     <h2 class="section-title">Share your thoughts<br /> with the world</h2>
                     <p class="section-text">
                         Share your thought with a socially
-                        conscious group of changemakers. Bounce
+                        conscious group of change-makers. Bounce
                         ideas between each other and learn from
                         others how they make change in this world.
                     </p>
@@ -215,9 +215,25 @@ share and explore ideas that matter
         <footer id="site-footer">
             <div class="column">
                 <img id="vurze-footer-logo" src="img/LogoVurze_white.png" alt="Vurze" width="151" height="57" />
-                <span id="copyright-text">MIWI &copy; 2015. All rights reserved.</span>
+                <span id="copyright-text">MIWI &copy; 2015. All rights reserved. <a href="privacy">Privacy Policy</a> & <a href="terms-and-conditions">Terms of Use</a></span>
             </div>
         </footer>
         <script src="js/site.js"></script>
+        <script>
+            (function() {
+                var _fbq = window._fbq || (window._fbq = []);
+                if (!_fbq.loaded) {
+                    var fbds = document.createElement('script');
+                    fbds.async = true;
+                    fbds.src = '//connect.facebook.net/en_US/fbds.js';
+                    var s = document.getElementsByTagName('script')[0];
+                    s.parentNode.insertBefore(fbds, s);
+                    _fbq.loaded = true;
+                }
+            })();
+        window._fbq = window._fbq || [];
+        window._fbq.push(['track', '6030768616608', {'value':'0.00','currency':'EUR'}]);
+        </script>
+        <noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?ev=6030768616608&amp;cd[value]=0.00&amp;cd[currency]=EUR&amp;noscript=1" /></noscript>
     </body>
 </html>
