--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ share and explore ideas that matter
                 </div>
             </div>
         </section>
-        <section class="site-section" id="connect">
+        <section class="site-section" id="connect" style="height: 660px;">
             <div class="column">
                 <div class="section-block left">
                     <div id="people">
@@ -143,8 +143,8 @@ share and explore ideas that matter
                 </div>
                 <div class="section-block black right">
                     <div class="cute-little-bar purple">&nbsp;</div>
-                    <h2 class="section-title">Connect with passionate and interesting people</h2>
-                    <p class="section-text">
+                    <h2 class="section-title" style="color: #4A4A4A;">Connect with passionate and interesting people</h2>
+                    <p class="section-text" style="color: #4A4A4A;">
                         Connect with like-minded people and discuss
                         issues that you find important. Vurze helps you find
                         and connect with communities that share your
@@ -158,7 +158,7 @@ share and explore ideas that matter
             <div class="column">
                 <div class="section-block">
                     <div class="cute-little-bar">&nbsp;</div>
-                    <h2 class="section-title">Share your thoughts<br /> with the world</h2>
+                    <h2 class="section-title">Share<br /> your thoughts<br /> with the world</h2>
                     <p class="section-text">
                         Share your thought with a socially
                         conscious group of change-makers. Bounce
