--- a/index.html
+++ b/index.html
@@ -219,6 +219,12 @@ share and explore ideas that matter
             </div>
         </footer>
         <script src="js/site.js"></script>
+        <script src=”//platform.twitter.com/oct.js” type=”text/javascript"></script>
+        <script type="text/javascript">twttr.conversion.trackPid('ntp46', { tw_sale_amount: 0, tw_order_quantity: 0 });</script>
+        <noscript>
+            <img height="1" width="1" style="display:none;" alt="" src="https://analytics.twitter.com/i/adsct?txn_id=ntp46&p_id=Twitter&tw_sale_amount=0&tw_order_quantity=0" />
+            <img height="1" width="1" style="display:none;" alt="" src="//t.co/i/adsct?txn_id=ntp46&p_id=Twitter&tw_sale_amount=0&tw_order_quantity=0" />
+        </noscript>
         <script>
             (function() {
                 var _fbq = window._fbq || (window._fbq = []);
