Social icon URLs

--- a/index.html
+++ b/index.html
@@ -184,27 +184,27 @@ share and explore ideas that matter
                     <h3 class="secondary-heading">Say hi, get in touch</h3>
                     <ul id="social-media-list">
                         <li class="social-media-item">
-                            <a class="contact-icon-link" href="#">
+                            <a class="contact-icon-link" href="http://facebook.com/vurze">
                                 <span class="contact-icon" id="facebook-icon"></span>
                             </a>
                         </li>
                         <li class="social-media-item">
-                            <a class="contact-icon-link" href="#">
+                            <a class="contact-icon-link" href="http://twitter.com/vurzeapp">
                                 <span class="contact-icon" id="twitter-icon"></span>
                             </a>
                         </li>
                         <li class="social-media-item">
-                            <a class="contact-icon-link" href="#">
+                            <a class="contact-icon-link" href="http://instagram.com/vurze">
                                 <span class="contact-icon" id="instagram-icon"></span>
                             </a>
                         </li>
                         <li class="social-media-item">
-                            <a class="contact-icon-link" href="#">
+                            <a class="contact-icon-link" href="mailto:info@vurze.com">
                                 <span class="contact-icon" id="mail-icon"></span>
                             </a>
                         </li>
                         <li class="social-media-item">
-                            <a class="contact-icon-link" href="#">
+                            <a class="contact-icon-link" href="https://goo.gl/maps/R94vT8MvVCJ2">
                                 <span class="contact-icon" id="maps-icon"></span>
                             </a>
                         </li>
