--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ share and explore ideas that matter
         <footer id="site-footer">
             <div class="column">
                 <img id="vurze-footer-logo" src="img/LogoVurze_white.png" alt="Vurze" width="151" height="57" />
-                <span id="copyright-text">MIWI &copy; 2015. All rights reserved. <a href="privacy">Privacy Policy</a> & <a href="terms-and-conditions">Terms of Use</a></span>
+                <span id="copyright-text">Vurze &copy; 2015. All rights reserved. <a href="privacy">Privacy Policy</a> & <a href="terms-and-conditions">Terms of Use</a></span>
             </div>
         </footer>
         <!--<script src="js/plugins.js"></script>-->
