--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ share and explore ideas that matter
                     <div class="section-block">
                         <div class="cute-little-bar" style="background-color: #489DDA;">&nbsp;</div>
                         <h2 class="section-title">Share<br /> your thoughts<br /> with the world</h2>
-                        <p class="section-text">
+                        <p class="section-text" style="width: 310px;">
                             Share your thoughts with a socially
                             conscious group of change-makers. Bounce
                             ideas between each other and learn from
