--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ share and explore ideas that matter
                         </form>
                     </div>
                     <a href="#" id="play-url">
-                        <img id="play-image" src="img/GooglePlay_button_white.png" alt="Vurze on Google Play" width="183" height="61" />
+                        <img id="play-image" src="img/GooglePlay_button_white.png" alt="Vurze on Google Play" width="155" height="50" />
                     </a>
                 </div>
             </section>
@@ -227,11 +227,11 @@ share and explore ideas that matter
         </footer>
         <!--<script src="js/plugins.js"></script>-->
         <script src="js/site.js"></script>
-        <script src=”//platform.twitter.com/oct.js” type=”text/javascript"></script>
-        <script type="text/javascript">twttr.conversion.trackPid('ntp46', { tw_sale_amount: 0, tw_order_quantity: 0 });</script>
+        <script src="//platform.twitter.com/oct.js" type="text/javascript"></script>
+        <script type="text/javascript">twttr.conversion.trackPid('nu0gp', { tw_sale_amount: 0, tw_order_quantity: 0 });</script>
         <noscript>
-            <img height="1" width="1" style="display:none;" alt="" src="https://analytics.twitter.com/i/adsct?txn_id=ntp46&p_id=Twitter&tw_sale_amount=0&tw_order_quantity=0" />
-            <img height="1" width="1" style="display:none;" alt="" src="//t.co/i/adsct?txn_id=ntp46&p_id=Twitter&tw_sale_amount=0&tw_order_quantity=0" />
+            <img height="1" width="1" style="display:none;" alt="" src="https://analytics.twitter.com/i/adsct?txn_id=nu0gp&p_id=Twitter&tw_sale_amount=0&tw_order_quantity=0" />
+            <img height="1" width="1" style="display:none;" alt="" src="//t.co/i/adsct?txn_id=nu0gp&p_id=Twitter&tw_sale_amount=0&tw_order_quantity=0" />
         </noscript>
         <script>
             (function() {
