--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@ share and explore ideas that matter
                     <div class="section-block" id="banner-block">
                         <h2 class="section-title" id="main-heading">Connect<br class="mobile-break" /> with people<br class="mobile-break" /> who care</h2>
                         <p class="section-text">
-                            Vurze is a social network for change-makers
+                            Vurze is a social network for change-makers<br />
                             that connects you with people like you, to
-                            share and explore ideas that matter
+                            share and explore<br />ideas that matter.
                         </p>
                         <form method="POST" action="#" class="invite-form">
                             <label for="main-email-input" class="invite-label">
