--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ share and explore ideas that matter
                         <p class="section-text">
                             Vurze is a social network for change-makers<br />
                             that connects you with people like you, to
-                            share and explore<br />ideas that matter.
+                            share<br />and explore ideas that matter.
                         </p>
                         <form method="POST" action="#" class="invite-form">
                             <label for="main-email-input" class="invite-label">
