--- a/index.html
+++ b/index.html
@@ -48,10 +48,17 @@ share and explore ideas that matter
             </div>
         </div>
         <div class="main">
-            <section class="site-section" id="banner">
+            <div id="header">
                 <div class="column">
                     <img id="logo" src="img/LogoVurze_white.png" alt="Vurze" width="151" height="57" />
-                    <div class="section-block" id="banner-block">
+                    <a href="#" id="play-url">
+                        <img id="play-image" src="img/GooglePlay_button_white.png" alt="Vurze on Google Play" width="155" height="50" />
+                    </a>
+                </div>
+            </div>
+            <section class="site-section" id="banner">
+                <div class="column">
+                    <div class="section-block" id="banner-block" style="padding-top: 100px;">
                         <h2 class="section-title" id="main-heading">Connect<br class="mobile-break" /> with people<br class="mobile-break" /> who care</h2>
                         <p class="section-text">
                             Vurze is a social network for change-makers<br />
@@ -66,9 +73,6 @@ share and explore ideas that matter
                             <input type="submit" class="invite-submit" value="REQUEST" />
                         </form>
                     </div>
-                    <a href="#" id="play-url">
-                        <img id="play-image" src="img/GooglePlay_button_white.png" alt="Vurze on Google Play" width="155" height="50" />
-                    </a>
                 </div>
             </section>
             <section class="site-section" id="explanation">
@@ -147,7 +151,7 @@ share and explore ideas that matter
                             </div>
                         </div>
                     </div>
-                    <div class="section-block black right">
+                    <div class="section-block black right" style="margin-right: 50px;">
                         <div class="cute-little-bar purple">&nbsp;</div>
                         <h2 class="section-title" style="color: #4A4A4A;">Connect with passionate and interesting people</h2>
                         <p class="section-text" style="color: #4A4A4A;">
@@ -216,19 +220,18 @@ share and explore ideas that matter
                             </li>
                         </ul>
                     </div>
+                    <span id="copyright-text">Vurze &copy; 2015. All rights reserved. <a href="privacy">Privacy Policy</a> & <a href="terms-and-conditions">Terms of Use</a></span>
                 </div>
             </section>
         </div>
-        <footer id="site-footer">
-            <div class="column">
-                <img id="vurze-footer-logo" src="img/LogoVurze_white.png" alt="Vurze" width="151" height="57" />
-                <span id="copyright-text">Vurze &copy; 2015. All rights reserved. <a href="privacy">Privacy Policy</a> & <a href="terms-and-conditions">Terms of Use</a></span>
-            </div>
-        </footer>
         <!--<script src="js/plugins.js"></script>-->
         <script src="js/site.js"></script>
         <script src="//platform.twitter.com/oct.js" type="text/javascript"></script>
-        <script type="text/javascript">twttr.conversion.trackPid('nu0gp', { tw_sale_amount: 0, tw_order_quantity: 0 });</script>
+        <script type="text/javascript">
+            if (typeof twttr !== 'undefined') {
+                twttr.conversion.trackPid('nu0gp', { tw_sale_amount: 0, tw_order_quantity: 0 });
+            }
+        </script>
         <noscript>
             <img height="1" width="1" style="display:none;" alt="" src="https://analytics.twitter.com/i/adsct?txn_id=nu0gp&p_id=Twitter&tw_sale_amount=0&tw_order_quantity=0" />
             <img height="1" width="1" style="display:none;" alt="" src="//t.co/i/adsct?txn_id=nu0gp&p_id=Twitter&tw_sale_amount=0&tw_order_quantity=0" />
