--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ share and explore ideas that matter
         <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
     </head>
     <body>
+        <div id="shadow-overlay"></div>
         <div id="share-overlay">
             <h2 id="share-overlay-title">Thanks for signing up</h2>
             <p id="share-overlay-text">
