--- a/index.html
+++ b/index.html
@@ -62,17 +62,11 @@ share and explore ideas that matter
                     <div class="section-block" id="banner-block" style="padding-top: 100px;">
                         <h2 class="section-title" id="main-heading">Connect<br class="mobile-break" /> with people<br class="mobile-break" /> who care</h2>
                         <p class="section-text">
-                            Vurze is a social network for change-makers<br />
+                            Vurze is an interest network for change-makers<br />
                             that connects you with people like you, to
                             share<br />and explore ideas that matter.
                         </p>
-                        <form method="POST" action="#" class="invite-form">
-                            <label for="main-email-input" class="invite-label">
-                                <img class="email-label-image" src="img/Icon_envelop_Java.png" alt="Email" width="36" height="24" />
-                            </label>
-                            <input type="text" name="email" class="invite-input" id="main-email-input" placeholder="Sign up for an invite" spellcheck="false" />
-                            <input type="submit" class="invite-submit" value="REQUEST" />
-                        </form>
+                        <a style="margin: 50px 0 0 30px;" class="download-button" href="https://play.google.com/store/apps/details?id=com.miwi.vurze">Download Vurze for free</a>
                     </div>
                 </div>
             </section>
@@ -182,14 +176,7 @@ share and explore ideas that matter
             <section id="invite-signup">
                 <div class="column">
                     <div class="section-block left">
-                        <h3 class="secondary-heading">Sign up for an invite</h3>
-                        <form method="POST" action="#" class="invite-form secondary">
-                            <label for="secondary-email-input" class="invite-label">
-                                <img class="email-label-image" src="img/Icon_envelop_Java.png" alt="Email" width="36" height="24" />
-                            </label>
-                            <input type="text" name="email" class="invite-input" id="secondary-email-input" placeholder="Sign up for an invite" spellcheck="false" />
-                            <input type="submit" class="invite-submit secondary" value="REQUEST" />
-                        </form>
+                        <a class="download-button inverted" href="https://play.google.com/store/apps/details?id=com.miwi.vurze">Download Vurze for free</a>
                     </div>
                     <div class="section-block right">
                         <h3 class="secondary-heading">Say hi, get in touch</h3>
