Vurze mobile update

--- a/index.html
+++ b/index.html
@@ -52,21 +52,21 @@ share and explore ideas that matter
             <div id="header">
                 <div class="column">
                     <img id="logo" src="img/LogoVurze_white.png" alt="Vurze" width="151" height="57" />
-                    <a href="#" id="play-url">
+                    <a href="https://play.google.com/store/apps/details?id=com.miwi.vurze" id="play-url">
                         <img id="play-image" src="img/GooglePlay_button_white.png" alt="Vurze on Google Play" width="155" height="50" />
                     </a>
                 </div>
             </div>
             <section class="site-section" id="banner">
                 <div class="column">
-                    <div class="section-block" id="banner-block" style="padding-top: 100px;">
-                        <h2 class="section-title" id="main-heading">Connect<br class="mobile-break" /> with people<br class="mobile-break" /> who care</h2>
+                    <div class="section-block" id="banner-block">
+                        <h2 class="section-title" id="main-heading">Connect with<br class="mobile-break" /> people who care</h2>
                         <p class="section-text">
                             Vurze is an interest network for change-makers<br />
                             that connects you with people like you, to
                             share<br />and explore ideas that matter.
                         </p>
-                        <a style="margin: 50px 0 0 30px;" class="download-button" href="https://play.google.com/store/apps/details?id=com.miwi.vurze">Download Vurze for free</a>
+                        <a style="margin: 50px auto" class="download-button" href="https://play.google.com/store/apps/details?id=com.miwi.vurze">Download Vurze for free</a>
                     </div>
                 </div>
             </section>
@@ -178,7 +178,7 @@ share and explore ideas that matter
                     <div class="section-block left">
                         <a class="download-button inverted" href="https://play.google.com/store/apps/details?id=com.miwi.vurze">Download Vurze for free</a>
                     </div>
-                    <div class="section-block right">
+                    <div class="section-block right" id="social-media-block">
                         <h3 class="secondary-heading">Say hi, get in touch</h3>
                         <ul id="social-media-list">
                             <li class="social-media-item">
